  with --with-mysqli and MySQL 6.0). (Jani)
- Fixed bug #49095 (proc_get_status['exitcode'] fails on win32). (Felipe)
- Fixed bug #49092 (ReflectionFunction fails to work with functions in fully
  qualified namespaces). (Kalle, Jani)
- Fixed bug #49074 (private class static fields can be modified by using
  reflection). (Jani)
- Fixed bug #49108 (2nd scan_dir produces segfault). (Felipe)
- Fixed bug #49065 ("disable_functions" php.ini option does not work on 
  Zend extensions). (Stas)
- Fixed bug #49064 (--enable-session=shared does not work: undefined symbol:
  php_url_scanner_reset_vars). (Jani)
- Fixed bug #49056 (parse_ini_file() regression in 5.3.0 when using non-ASCII
  strings as option keys). (Jani)
- Fixed bug #49052 (context option headers freed too early when using
  --with-curlwrappers). (Jani)
- Fixed bug #49032 (SplFileObject::fscanf() variables passed by reference).
  (Jani)
- Fixed bug #49026 (proc_open() can bypass safe_mode_protected_env_vars
  restrictions). (Ilia)
- Fixed bug #49012 (phar tar signature algorithm reports as Unknown (0) in
  getSignature() call). (Greg)
- Fixed bug #49020 (phar misinterprets ustar long filename standard).
  (Greg)
- Fixed bug #49018 (phar tar stores long filenames wit prefix/name reversed).
  (Greg)
- Fixed bug #49014 (dechunked filter broken when serving more than 8192 bytes
  in a chunk). (andreas dot streichardt at globalpark dot com, Ilia)
- Fixed bug #49000 (PHP CLI in Interactive mode (php -a) crashes 
  when including files from function). (Stas)
- Fixed bug #48994 (zlib.output_compression does not ouput HTTP headers when
  set to a string value). (Jani)
- Fixed bug #48980 (Crash when compiling with pdo_firebird). (Felipe)
- Fixed bug #48962 (cURL does not upload files with specified filename).
  (Ilia)
- Fixed bug #48929 (Double \r\n after HTTP headers when "header" context
  option is an array). (David Zülke)
- Fixed bug #48913 (Too long error code strings in pdo_odbc driver).