@@ -7,6 +7,7 @@
 #ifdef ZEND_ENGINE_2
 
 #include "lib/zip.h"
+#include "lib/zip.h"
 
 #include "php_streams.h"
 #include "ext/standard/file.h"
@@ -35,14 +36,20 @@ static size_t php_zip_ops_read(php_stream *stream, char *buf, size_t count TSRML
 
 	if (self->za && self->zf) {
 		n = (size_t)zip_fread(self->zf, buf, (int)count);
-
-		if (n == 0) {
+		if (n < 0) {
+			int ze, se;
+			zip_file_error_get(self->zf, &ze, &se);
+			stream->eof = 1;
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Zip stream error: %s", zip_file_strerror(self->zf));
+			return 0;
+		}
+		if (n == 0 || n < count) {
 			stream->eof = 1;
 		} else {
 			self->cursor += n;
 		}
 	}
-	return n<1 ? 0 : n;
+	return (n < 1 ? 0 : n);
 }
 /* }}} */
 
@@ -62,13 +69,14 @@ static int php_zip_ops_close(php_stream *stream, int close_handle TSRMLS_DC)
 {
 	STREAM_DATA_FROM_STREAM();
 	if (close_handle) {
-		if (self->za) {
-			zip_close(self->za);
-			self->za = NULL;
-		}
 		if (self->zf) {
 			zip_fclose(self->zf);
 			self->zf = NULL;
+		}
+
+		if (self->za) {
+			zip_close(self->za);
+			self->za = NULL;
 		}
 	}
 	efree(self);
